src-tauri/crates/onecad-core/tests/snapshots/schema_freeze__operation_boolean.snap
---
source: crates/onecad-core/tests/schema_freeze.rs
expression: rec
---
{
  "recordId": "00000000-0000-0000-0000-000000002ec7",
  "recordSchemaVersion": 1,
  "stepIndex": 7,
  "name": "Boolean 1",
  "opType": "Boolean",
  "params": {
    "operation": "Union",
    "targetBodyId": "00000000-0000-0000-0000-00000000b0d1",
    "toolBodyId": "00000000-0000-0000-0000-00000000b0d2"
  },
  "inputs": {
    "bodies": [
      "00000000-0000-0000-0000-00000000b0d1",
      "00000000-0000-0000-0000-00000000b0d2"
    ],
    "sketches": [],
    "elements": []
  },
  "outputs": [
    "00000000-0000-0000-0000-00000000b0d1"
  ],
  "determinism": {
    "parallel": false,
    "occtOptionsHash": "cbf29ce484222325",
    "tolerancePolicyHash": "b2c9000000000000",
    "solverPolicyHash": "3e9a000000000000"
  },
  "suppressed": false
}
