src-tauri/crates/onecad-core/tests/snapshots/schema_freeze__operation_chamfer.snap
---
source: crates/onecad-core/tests/schema_freeze.rs
expression: rec
---
{
  "recordId": "00000000-0000-0000-0000-000000002ec5",
  "recordSchemaVersion": 1,
  "stepIndex": 5,
  "name": "Chamfer 1",
  "opType": "Chamfer",
  "params": {
    "chainTangentEdges": true,
    "edgeIds": [
      "e:14"
    ],
    "radius": {
      "value": 1.0
    }
  },
  "inputs": {
    "bodies": [],
    "sketches": [],
    "elements": [
      "e:14"
    ]
  },
  "outputs": [
    "00000000-0000-0000-0000-00000000b0d1"
  ],
  "determinism": {
    "parallel": false,
    "occtOptionsHash": "cbf29ce484222325",
    "tolerancePolicyHash": "b2c9000000000000",
    "solverPolicyHash": "3e9a000000000000"
  },
  "suppressed": false
}
