src-tauri/crates/onecad-core/tests/snapshots/schema_freeze__operation_loft.snap
---
source: crates/onecad-core/tests/schema_freeze.rs
expression: rec
---
{
  "recordId": "00000000-0000-0000-0000-000000002eca",
  "recordSchemaVersion": 1,
  "stepIndex": 10,
  "name": "Loft 1",
  "opType": "Loft",
  "params": {
    "booleanMode": "NewBody",
    "isRuled": false,
    "isSolid": true,
    "profiles": [
      {
        "regionId": "r0",
        "sketchId": "00000000-0000-0000-0000-000000005c01"
      },
      {
        "regionId": "r1",
        "sketchId": "00000000-0000-0000-0000-000000005c02"
      }
    ]
  },
  "inputs": {
    "bodies": [],
    "sketches": [
      "00000000-0000-0000-0000-000000005c01",
      "00000000-0000-0000-0000-000000005c02"
    ],
    "elements": []
  },
  "outputs": [
    "00000000-0000-0000-0000-00000000b0d1"
  ],
  "determinism": {
    "parallel": false,
    "occtOptionsHash": "cbf29ce484222325",
    "tolerancePolicyHash": "b2c9000000000000",
    "solverPolicyHash": "3e9a000000000000"
  },
  "suppressed": false
}
