src-tauri/crates/onecad-core/tests/snapshots/schema_freeze__operation_mirror_body.snap
---
source: crates/onecad-core/tests/schema_freeze.rs
expression: rec
---
{
  "recordId": "00000000-0000-0000-0000-000000002ecc",
  "recordSchemaVersion": 1,
  "stepIndex": 12,
  "name": "Mirror 1",
  "opType": "MirrorBody",
  "params": {
    "fuseWithOriginal": false,
    "planeNormal": [
      1.0,
      0.0,
      0.0
    ],
    "planePoint": [
      0.0,
      0.0,
      0.0
    ],
    "sourceBodyId": "00000000-0000-0000-0000-00000000b0d1"
  },
  "inputs": {
    "bodies": [
      "00000000-0000-0000-0000-00000000b0d1"
    ],
    "sketches": [],
    "elements": []
  },
  "outputs": [
    "00000000-0000-0000-0000-00000000b0d1"
  ],
  "determinism": {
    "parallel": false,
    "occtOptionsHash": "cbf29ce484222325",
    "tolerancePolicyHash": "b2c9000000000000",
    "solverPolicyHash": "3e9a000000000000"
  },
  "suppressed": false
}
