src-tauri/crates/onecad-core/tests/snapshots/schema_freeze__operation_opaque_frozen.snap
---
source: crates/onecad-core/tests/schema_freeze.rs
expression: rec
---
{
  "recordId": "00000000-0000-0000-0000-000000002ecd",
  "recordSchemaVersion": 1,
  "stepIndex": 13,
  "name": "Frozen 1",
  "opType": "FlangeBend",
  "params": {
    "angleDeg": 90.0,
    "reliefType": "rectangular"
  },
  "vendorHint": {
    "tool": "future"
  },
  "inputs": {
    "bodies": [],
    "sketches": [],
    "elements": []
  },
  "outputs": [
    "00000000-0000-0000-0000-00000000b0d1"
  ],
  "determinism": {
    "parallel": false,
    "occtOptionsHash": "cbf29ce484222325",
    "tolerancePolicyHash": "b2c9000000000000",
    "solverPolicyHash": "3e9a000000000000"
  },
  "suppressed": false
}
