src-tauri/crates/onecad-core/tests/snapshots/schema_freeze__operation_revolve.snap
---
source: crates/onecad-core/tests/schema_freeze.rs
expression: rec
---
{
  "recordId": "00000000-0000-0000-0000-000000002ec3",
  "recordSchemaVersion": 1,
  "stepIndex": 3,
  "name": "Revolve 1",
  "opType": "Revolve",
  "params": {
    "angleDeg": {
      "value": 360.0
    },
    "axis": {
      "kind": "sketchLine",
      "lineId": "00000000-0000-0000-0000-00000000e001",
      "sketchId": "00000000-0000-0000-0000-000000005c01"
    },
    "booleanMode": "NewBody",
    "profile": {
      "regionId": "r0",
      "sketchId": "00000000-0000-0000-0000-000000005c01"
    }
  },
  "inputs": {
    "bodies": [],
    "sketches": [
      "00000000-0000-0000-0000-000000005c01"
    ],
    "elements": []
  },
  "outputs": [
    "00000000-0000-0000-0000-00000000b0d1"
  ],
  "determinism": {
    "parallel": false,
    "occtOptionsHash": "cbf29ce484222325",
    "tolerancePolicyHash": "b2c9000000000000",
    "solverPolicyHash": "3e9a000000000000"
  },
  "suppressed": false
}
